# json-ld

./: .clippy.toml  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.txt  cliff.toml  test.jsonld
.github/: FUNDING.yml
cli/: Cargo.toml
cli/src/: main.rs
compaction/: Cargo.toml  Makefile  README.md  README.tpl
compaction/src/: document.rs  iri.rs  lib.rs  node.rs  property.rs  value.rs
compaction/src/document/: expanded.rs  flattened.rs
context-processing/: Cargo.toml  README.md  README.tpl
context-processing/src/: json.rs  lib.old.rs  lib.rs  processed.rs  stack.rs  syntax.rs
context-processing/src/algorithm/: define.rs  iri.rs  merged.rs  mod.rs
context-processing/src/json/: define.rs  iri.rs  utils.rs
context-processing/src/syntax/: define.rs  iri.rs  merged.rs
core/: Cargo.toml  README.md  README.tpl
core/src/: container.rs  context.rs  deserialization.rs  direction.rs  document.rs  error.rs  flattening.rs  future.rs  id.rs  indexed.rs  lang.rs  lang_string.rs  lexicon.rs  lib.rs  loader.rs  loc.rs  mode.rs  namespace.rs  null.rs  object.rs  print.rs  quad.rs  rdf.rs  reference.rs  serialization.rs  term.rs  ty.rs  utils.rs  warning.rs
core/src/context/: definition.rs  inverse.rs  mod.rs
core/src/deserialization/: object.rs
core/src/deserialization/object/: list.rs  node.rs  value.rs
core/src/document/: expanded.rs  flattened.rs
core/src/flattening/: environment.rs  mod.rs  namespace.rs  node_map.rs
core/src/id/: generator.rs
core/src/loader/: chain.rs  fileurl.rs  fs.rs  mod.rs  none.rs  reqwest.rs
core/src/loader/reqwest/: link.rs  mod.rs
core/src/object/: list.rs  mapped_eq.rs  mod.rs  node.rs  typ.rs  value.rs
core/src/object/node/: multiset.rs  properties.rs  reverse_properties.rs
core/src/rdf/: mod.rs  quad.rs
core/src/syntax/: keyword.rs
core/src/utils/: comparison.rs  hash.rs
core/src/utils/json/: build.rs
crates/context-processing/: Cargo.toml
crates/context-processing/src/: lib.rs  processed.rs  stack.rs
crates/context-processing/src/algorithm/: define.rs  iri.rs  merged.rs  mod.rs
crates/serialization/: Cargo.toml  README.md
crates/serialization/examples/: into_json_ld.rs
crates/serialization/src/: lib.rs
crates/serialization/src/expanded/: default_graph.rs  node.rs  object.rs  property.rs
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: container.rs  direction.rs  expandable.rs  into_json.rs  lang.rs  lib.rs  nullable.rs  print_ld.rs  try_from_json.rs  utils.rs
crates/syntax/src/context/: mod.rs  print.rs
crates/syntax/src/context/definition/: key.rs  mod.rs  reference.rs  version.rs  vocab.rs
crates/syntax/src/context/term_definition/: id.rs  index.rs  mod.rs  type_.rs
examples/: compaction.rs  custom-ids-iref-enum.rs  custom-ids.rs  expansion.rs  generate-compact-tests.rs  generate-expand-tests.rs  generate-flatten-tests.rs  generate-to_rdf-tests.rs  reqwest-loader.rs  vocab.jsonld
expansion/: Cargo.toml  README.md  README.tpl
expansion/old/: array.rs  loader.rs
expansion/old/loader/reqwest/: mod.rs
expansion/src/: array.rs  document.rs  element.rs  error.rs  expanded.rs  lib.rs  literal.rs  loader.rs  node.rs  options.rs  value.rs  warning.rs
expansion/src/loader/: fs.rs  none.rs
json-ld/: .insert-toc.sh  .toc.md  Cargo.toml  Makefile  README.md  README.tpl
json-ld/examples/: context.jsonld  expansion.rs  generate-compact-tests.rs  generate-expand-tests.rs  generate-flatten-tests.rs  sample.jsonld
json-ld/src/: document.rs  flattening.rs  lib.rs  processor.rs
json-ld/src/processor/: mod.rs  remote_document.rs
json-ld/tests/: expansion.rs
old-tests/: compact.rs  expand.rs
serialization/: Cargo.toml
serialization/examples/: into_json_ld.rs
serialization/src/: expanded.rs  lib.rs
serialization/src/expanded/: default_graph.rs  graph.rs  list.rs  mod.rs  node.rs  object.rs  property.rs  value.rs
serializer/: Cargo.toml
serializer/examples/: into_json_ld.rs
serializer/src/: expanded.rs  lib.rs
serializer/src/expanded/: default_graph.rs  graph.rs  list.rs  node.rs  object.rs  property.rs  value.rs
src/: blank.rs  container.rs  context.rs  direction.rs  document.rs  error.rs  id.rs  indexed.rs  key.rs  keyword.rs  lang.rs  lenient.rs  lib.rs  literal.rs  loader.rs  loc.rs  meta.rs  mode.rs  node.rs  (+11 more)
syntax/: .gitignore  Cargo.toml  README.md  README.tpl
syntax/src/: compact_iri.rs  compare.rs  container.rs  context.rs  direction.rs  document.rs  entry.rs  error.rs  expandable.rs  into_json.rs  json.rs  keyword.rs  lang.rs  lib.rs  nullable.rs  number.rs  print.rs  print_ld.rs  term.rs  try_from_json.rs  typ.rs  value.rs
syntax/src/context/: definition.rs  key.rs  print.rs  reference.rs  term_definition.rs  try_from_json.rs
syntax/src/context/definition/: import.rs  key.rs  mod.rs  reference.rs  type_.rs  version.rs  vocab.rs
syntax/src/context/term_definition/: id.rs  index.rs  mod.rs  nest.rs  type_.rs
syntax/src/document/: object.rs
syntax/src/document/object/: index_map.rs
syntax/src/value/: object.rs
syntax/src/value/object/: index_map.rs
testing/: Cargo.toml  Makefile  README.md  README.tpl
testing/src/: lib.rs  ty.rs  vocab.rs
testing/src/ty/: mod.rs  parse.rs
tests/: Cargo.toml  README.md  README.tpl  compact.rs  custom.rs  expand.rs  flatten.rs  generate.sh  to_rdf.rs
tests/custom/: 0122-in.jsonld  0122-out.jsonld  0123-out.jsonld  0124-in.jsonld  c037-out.jsonld  c038-in.jsonld  c038-out.jsonld  e111-out.jsonld  e112-in.jsonld  e112-out.jsonld  e122-in.jsonld  e122-out.jsonld  li12-out.jsonld  sort-jsonld-array.rb
tests/src/: lib.rs
tests/templates/: compact-header.rs  compact-test-negative.rs  compact-test-positive.rs  expand-header.rs  expand-test-positive.rs  flatten-header.rs  flatten-test-negative.rs  flatten-test-positive.rs  header-compact.rs  header-expand.rs  header.rs  test-negative.rs  test-positive.rs  to_rdf-header.rs  to_rdf-test-negative.rs
tests/tests/: compact.rs  custom.rs  expand.rs  expansion.rs  flatten.rs  to_rdf.rs
tests/tests/custom/: t01-in.jsonld
(+250 files in other folders)
