[package]
name = "json-ld"
authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.77.0"
version = "0.19.1"
description = "JSON-LD implementation"
readme = "README.md"

[features]
default = ["algorithms", "reqwest"]

# JSON-LD algorithms implementations.
algorithms = ["serde"]

# Serialization/deserialization with `serde`.
serde = ["dep:serde", "iref/serde", "indexmap/serde"]

# Loader implementation based on `reqwest`.
reqwest = ["dep:reqwest", "dep:reqwest-middleware"]

[dependencies]
iref.path = "/home/timothee/Projets/utils/parsing/iref/"
# json-syntax = "0.12"
json-syntax = { path = "/home/timothee/Projets/utils/parsing/json/syntax/", features = [
	"serde",
] }
static-iref = "3.0"
langtag = "0.4"
rdf-types.path = "/home/timothee/Projets/rdf/rdf-types/"
# contextual = "0.1.4"
locspan = "0.8"
educe = "0.4.23"
futures = "0.3"
mown = "0.2.2"
hashbrown = "0.13.1"
smallvec = "1.10"
log = "0.4.17"
thiserror = "1.0.38"
indexmap = "2.10"
mime = "0.3"

serde = { version = "1.0", features = ["derive"], optional = true }

# iref-enum = "3.0"

anyhow = "1.0.98"

# Serialization/deserialization with `serde`.
# linked-data = "0.1"
linked-data = { path = "/home/timothee/Projets/rdf/linked-data-rs/", features = [
	"indexmap",
] }
xsd-types.path = "/home/timothee/Projets/rdf/xsd-types/"

# Loader implementation based on `reqwest`.
reqwest = { version = "0.12.22", optional = true }
reqwest-middleware = { version = "0.4.2", optional = true }

[dev-dependencies]
# json-ld-testing.workspace = true
# async-std = { workspace = true, features = ["attributes"] }
tokio = { version = "*", features = ["macros"] }
nquads-syntax = "0.19"
stacker = "0.1.15"

[package.metadata.docs.rs]
all-features = true

[workspace]
# members = ["crates/*"]

resolver = "2"

# [workspace.package]


# [workspace.dependencies]
# json-ld = { path = ".", version = "0.19.1" }
# json-ld-syntax = { path = "crates/syntax", version = "0.19.1" }
# json-ld-core = { path = "crates/core", version = "0.19.1" }
# json-ld-context-processing = { path = "crates/context-processing", version = "0.19.1" }
# json-ld-expansion = { path = "crates/expansion", version = "0.19.1" }
# json-ld-compaction = { path = "crates/compaction", version = "0.19.1" }
# json-ld-serialization = { path = "crates/serialization", version = "0.19.1" }
# json-ld-testing = { path = "crates/testing" }
