[package]
name = "json-ld-cli"
version = "0.9.1"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Command line interface for JSON-LD"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
json-ld = { path = "../json-ld", version = "0.9.1", features = ["reqwest"] }
json-ld-testing = { path = "../testing", version = "0.9.1" }
iref = "2.2"
static-iref = "2.0"
rdf-types = "0.12.3"
locspan = "0.7.9"
tokio = { version = "1.23", features = ["rt-multi-thread", "net", "macros"] }
log = "0.4.17"
stderrlog = "0.5"
contextual = "0.1.3"
clap = { version = "3.0", features = ["derive"] }