[package]
name = "json-ld-compaction"
version = "0.8.0-beta"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
description = "A JSON-LD document compaction implementation"
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld-compaction"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
json-ld-core = { path = "../core", version = "0.8.0-beta" }
json-ld-syntax = { path = "../syntax", version = "0.8.0-beta" }
json-ld-context-processing = { path = "../context-processing", version = "0.8.0-beta" }
json-ld-expansion = { path = "../expansion", version = "0.8.0-beta" }
json-syntax = "0.8.13"
langtag = "0.3"
iref = "2.2"
contextual = "0.1.3"
rdf-types = "0.11"
futures = "^0.3"
mown = "0.2.1"
locspan = "0.7.9"
derivative = "2.2"