[package]
name = "json-ld-compaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "A JSON-LD document compaction implementation"
documentation = "https://docs.rs/json-ld-compaction"
readme = "README.md"

[dependencies]
json-ld-core.workspace = true
json-ld-syntax.workspace = true
json-ld-context-processing.workspace = true
json-ld-expansion.workspace = true
json-syntax.workspace = true
langtag.workspace = true
iref.workspace = true
contextual.workspace = true
rdf-types.workspace = true
futures.workspace = true
mown.workspace = true
locspan.workspace = true
derivative.workspace = true
thiserror.workspace = true
indexmap.workspace = true