[package]
name = "json-ld-core"
version = "0.9.1-beta"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
description = "A JSON-LD implementation"
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
reqwest = ["bytes", "dep:reqwest"]

[dependencies]
json-ld-syntax = { path = "../syntax", version = "0.9.1-beta" }
json-syntax = { version = "0.8.14", features = ["contextual"] }
log = "^0.4"
derivative = "^2.2"
mown = "^0.2"
iref = "2.2"
static-iref = "2.0"
futures = "^0.3"
once_cell = "^1.4"
langtag = "0.3"
smallvec = "1.10.0"
permutohedron = { version = "0.2" }
pretty_dtoa = "0.3"
rdf-types = { version = "0.12.4", features = ["contextual", "meta"] }
locspan = { version = "0.7.12", features = ["hashbrown"] }
locspan-derive = "0.6"
contextual = "0.1.3"
hashbrown = "0.13.1"
mime = "0.3"
reqwest = { version = "^0.11", optional = true }
bytes = { version = "^1.3", optional = true }

[dev-dependencies]
iref-enum = "2.1"