[package]
name = "json-ld-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "A JSON-LD implementation"
documentation = "https://docs.rs/json-ld"
readme = "README.md"

[features]
default = []
reqwest = ["bytes", "dep:reqwest"]

[dependencies]
json-ld-syntax.workspace = true
json-syntax = { workspace = true, features = ["contextual", "canonicalize"] }
rdf-types = { workspace = true, features = ["contextual", "meta"] }
locspan = { workspace = true, features = ["hashbrown"] }
locspan-derive.workspace = true
contextual.workspace = true
log.workspace = true
derivative.workspace = true
mown.workspace = true
iref.workspace = true
static-iref.workspace = true
futures.workspace = true
langtag.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
once_cell = "^1.4"
ryu-js = "0.2.2"
permutohedron = { version = "0.2" }
pretty_dtoa = "0.3"
mime = "0.3"
reqwest = { version = "^0.11", optional = true }
bytes = { version = "^1.3", optional = true }

[dev-dependencies]
iref-enum.workspace = true