[package]
name = "json-ld-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "A JSON-LD implementation"
documentation = "https://docs.rs/json-ld"
readme = "README.md"

[features]
default = []
reqwest = ["bytes", "dep:reqwest", "utf8-decode"]
serde = ["dep:serde", "json-syntax/serde"]

[dependencies]
json-ld-syntax.workspace = true
json-syntax = { workspace = true, features = ["contextual", "canonicalize"] }
rdf-types = { workspace = true, features = ["contextual", "meta"] }
contextual.workspace = true
log.workspace = true
educe.workspace = true
iref.workspace = true
static-iref.workspace = true
linked-data.workspace = true
futures.workspace = true
langtag.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
indexmap.workspace = true
serde = { workspace = true, optional = true }
once_cell = "^1.4"
ryu-js = "0.2.2"
permutohedron = { version = "0.2" }
pretty_dtoa = "0.3"
mime = "0.3"

# For the reqwest loader
reqwest = { version = "^0.11", optional = true }
bytes = { version = "^1.3", optional = true }
utf8-decode = { version = "1.0.1", optional = true }

# [dev-dependencies]
# iref-enum.workspace = true