[package]
name = "json-ld-expansion"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
description = "A JSON-LD document expansion implementation"
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld-context-processing"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
json-ld-core = { path = "../core" }
json-ld-syntax = { path = "../syntax" }
json-ld-context-processing = { path = "../context-processing" }
json-syntax = "0.8.13"
langtag = "0.3"
iref = "2.2"
rdf-types = "0.10"
futures = "^0.3"
mown = "0.2.1"
locspan = { version = "0.7.9", features = ["contextual"] }
derivative = "2.2"
contextual = "0.1.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
static-iref = "2.0"