[package]
name = "json-ld-expansion"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "A JSON-LD document expansion implementation"
documentation = "https://docs.rs/json-ld-context-processing"
readme = "README.md"

[dependencies]
json-ld-core.workspace = true
json-ld-syntax.workspace = true
json-ld-context-processing.workspace = true
json-syntax.workspace = true
langtag.workspace = true
iref.workspace = true
rdf-types.workspace = true
futures.workspace = true
mown.workspace = true
locspan = { workspace = true, features = ["contextual"] }
derivative.workspace = true
contextual.workspace = true

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
static-iref.workspace = true