[package]
name = "json-ld"
version = "0.7-beta"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
description = "A JSON-LD implementation"
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
# reqwest = ["json-ld-core/reqwest"]
uuid-generator-v3 = ["json-ld-core/uuid-generator-v3"]
uuid-generator-v4 = ["json-ld-core/uuid-generator-v4"]
uuid-generator-v5 = ["json-ld-core/uuid-generator-v5"]
default = ["uuid-generator-v3", "uuid-generator-v4", "uuid-generator-v5"]

[dependencies]
json-ld-syntax = { path = "../syntax" }
json-ld-core = { path = "../core" }
json-ld-context-processing = { path = "../context-processing" }
json-ld-expansion = { path = "../expansion" }
json-ld-compaction = { path = "../compaction" }
json-syntax = "0.8.13"
futures = "^0.3"
locspan = "0.7.9"
rdf-types = "0.10"
contextual = "0.1.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
iref = "2.2"
static-iref = "2.0"