[package]
name = "json-ld"
version = "0.9.1"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
description = "A JSON-LD implementation"
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
reqwest = ["json-ld-core/reqwest"]

[dependencies]
json-ld-syntax = { path = "../syntax", version = "0.9.1" }
json-ld-core = { path = "../core", version = "0.9.1" }
json-ld-context-processing = { path = "../context-processing", version = "0.9.1" }
json-ld-expansion = { path = "../expansion", version = "0.9.1" }
json-ld-compaction = { path = "../compaction", version = "0.9.1" }
json-syntax = "0.8.14"
futures = "^0.3"
locspan = "0.7.9"
rdf-types = "0.12.3"
contextual = "0.1.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
iref = "2.2"
static-iref = "2.0"