[package]
name = "json-ld"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "A JSON-LD implementation"
documentation = "https://docs.rs/json-ld"
readme = "README.md"

[features]
fileurl = ["json-ld-core/fileurl"]
reqwest = ["json-ld-core/reqwest"]
serde = ["json-ld-syntax/serde", "json-ld-core/serde"]

[dependencies]
json-ld-syntax.workspace = true
json-ld-core.workspace = true
json-ld-context-processing.workspace = true
json-ld-expansion.workspace = true
json-ld-compaction.workspace = true
json-ld-serialization.workspace = true
json-syntax.workspace = true
futures.workspace = true
locspan.workspace = true
rdf-types.workspace = true
contextual.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
iref.workspace = true
static-iref.workspace = true