[package]
name = "json-ld-testing"
version = "0.1.0"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Testing library for the `json-ld` library"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
json-ld = { path = "../json-ld" }
syn = { version = "1.0", features = ["full"] }
litrs = "0.2.3"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
iref = "2.2"
static-iref = "2.0"
iref-enum = "2.1.0"
rdf-types = "0.10"
grdf = { version = "0.12", features = ["meta"] }
locspan = "0.7.9"
contextual = "0.1.3"
async-std = "1.12.0"