[package]
name = "json-ld-testing"
version = "0.9.0-beta"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Testing library for the `json-ld` library"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
json-ld = { path = "../json-ld", version = "0.9.0-beta" }
syn = { version = "1.0", features = ["full"] }
litrs = "0.2.3"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
iref = "2.2"
static-iref = "2.0"
iref-enum = "2.1.0"
rdf-types = "0.12"
grdf = { version = "0.14", features = ["meta"] }
locspan = "0.7.9"
contextual = "0.1.3"
async-std = "1.12.0"
yansi = "0.5.1"