[package]
name = "json-ld-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "Testing library for the `json-ld` library"
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
json-ld.workspace = true
iref.workspace = true
static-iref.workspace = true
iref-enum.workspace = true
rdf-types = { workspace = true, features = ["contextual"] }
grdf = { workspace = true, features = ["meta"] }
contextual.workspace = true
async-std.workspace = true
syn = { version = "1.0", features = ["full"] }
litrs = "0.2.3"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
yansi = "0.5.1"