[package]
name = "json-ld-tests"
version = "0.9.1-beta"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Testing library for the `json-ld` library"
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = [ "/json-ld-api" ]

[dependencies]
json-ld = { path = "../json-ld", version = "0.9.1-beta" }
json-ld-testing = { path = "../testing", version = "0.9.1-beta" }
iref = "2.2"
static-iref = "2.0"
iref-enum = "2.1.0"
rdf-types = "0.12.3"
locspan = "0.7.9"
async-std = { version = "1.12", features = ["attributes"] }
log = "0.4.17"
grdf = { version = "0.14", features = ["meta"] }
contextual = "0.1.3"