[package]
name = "json-ld-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "Testing library for the `json-ld` library"
readme = "README.md"
exclude = [ "/json-ld-api" ]

[dependencies]
json-ld.workspace = true
json-ld-testing.workspace = true
iref.workspace = true
static-iref.workspace = true
iref-enum.workspace = true
rdf-types.workspace = true
locspan.workspace = true
async-std = { workspace = true, features = ["attributes"] }
log.workspace = true
grdf = { workspace = true, features = ["meta"] }
contextual.workspace = true
nquads-syntax = "0.10.0"