[package]
name = "json-ld-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD syntax"
documentation = "https://docs.rs/json-ld-syntax"
readme = "README.md"

[features]
serde = ["dep:serde", "iref/serde", "locspan/serde", "json-syntax/serde", "indexmap/serde"]

[dependencies]
iref.workspace = true
langtag.workspace = true
rdf-types.workspace = true
json-syntax.workspace = true
locspan.workspace = true
hashbrown.workspace = true
educe.workspace = true
smallvec.workspace = true
contextual.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
indexmap.workspace = true
decoded-char = "0.1.0"